--- a/13_fundamentals.ipynb
+++ b/13_fundamentals.ipynb
@@ -12,7 +12,7 @@
     "I will simply sample every quarter (after earnings releases) and then use that. Instead of having 1 file per ticker, we only need one fundamentals.csv file that contains everything. We can do this because the data is only updated quarterly so this file is small.\n",
     "\n",
     "The fundamentals.csv file:\n",
-    "* Column 1: date (at Feb 1, May 1, Aug 1, Nov 1)\n",
+    "* Column 1: date (at Mar 1, Jun 1, Sep 1, Dec 1)\n",
     "* Column 2: current ticker (however we might need to query the old ticker, which we luckily have the information for in tickers v5)\n",
     "* Other columns:\n",
     "    * Market-cap\n",
@@ -38,8 +38,8 @@
     "\n",
     "DATA_PATH = \"../data/polygon/\"\n",
     "\n",
-    "START_DATE = date(2003, 11, 1) # MUST BE 1st of FEB, MAY, AUG or NOV\n",
-    "END_DATE = date(2024, 3, 1)\n",
+    "START_DATE = date(2003, 12, 1) # MUST BE 1st of FEB, MAY, AUG or NOV\n",
+    "END_DATE = date(2024, 4, 1)\n",
     "\n",
     "with open(DATA_PATH + \"secret.txt\") as f:\n",
     "    KEY = next(f).strip()\n",
@@ -54,7 +54,7 @@
    "outputs": [],
    "source": [
     "rows = [] # List of dictionaries, to eventually create a DataFrame\n",
-    "tickers = get_tickers(types=['CS', 'ADRC'])\n",
+    "tickers = get_tickers(4, types=['CS', 'ADRC'])\n",
     "for index, row in tickers.iterrows():\n",
     "    id = row['ID']\n",
     "    ticker = id[:-11]\n",
@@ -71,15 +71,17 @@
     "            continue\n",
     "\n",
     "        ticker_on_day = ticker\n",
-    "        ticker_changes_str = tickers[tickers['ID'] == id]['tickers_old'].values[0]\n",
-    "        ticker_changes = ast.literal_eval(ticker_changes_str)\n",
+    "        \n",
+    "        # Old code to get correct old tickers. However since I now don't use renamings I don't need this.\n",
+    "        # ticker_changes_str = tickers[tickers['ID'] == id]['tickers_old'].values[0]\n",
+    "        # ticker_changes = ast.literal_eval(ticker_changes_str)\n",
     "\n",
-    "        # To get the point-in-time ticker, we need to search for the first ticker change after that date.\n",
-    "        # E.g. {'2022-10-17': 'BTX', '2021-03-26': 'NTN'} on 2021-03-26 is BTX, as on 2021-03-26 the ticker changed from NTN\n",
-    "        if ticker_changes:\n",
-    "            changes_after_day = dict(filter(lambda k: date.fromisoformat(k[0]) > day, ticker_changes.items()))\n",
-    "            if changes_after_day:\n",
-    "                ticker_on_day = ticker_changes[next(reversed(changes_after_day.keys()))]\n",
+    "        # # To get the point-in-time ticker, we need to search for the first ticker change after that date.\n",
+    "        # # E.g. {'2022-10-17': 'BTX', '2021-03-26': 'NTN'} on 2021-03-26 is BTX, as on 2021-03-26 the ticker changed from NTN\n",
+    "        # if ticker_changes:\n",
+    "        #     changes_after_day = dict(filter(lambda k: date.fromisoformat(k[0]) > day, ticker_changes.items()))\n",
+    "        #     if changes_after_day:\n",
+    "        #         ticker_on_day = ticker_changes[next(reversed(changes_after_day.keys()))]\n",
     "\n",
     "        try:\n",
     "            ticker_details = client.get_ticker_details(ticker=ticker_on_day, date=day)\n",
@@ -114,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,33 +128,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analysis\n",
-    "96.5% of stocks have market cap data and 83% has sic codes. Let's look at the stocks that don't. (We will filter on stocks that have a history larger than 60 days, because for short listings there won't be fundamental data.)"
+    "### Analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tickers = get_tickers(types=['CS', 'ADRC'])\n",
+    "tickers = get_tickers(4, types=['CS', 'ADRC'])\n",
     "# tickers = tickers[tickers['end_data'] - tickers['start_data'] > timedelta(days=60)] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Amount of tickers: 17647\n",
+      "Amount of stocks with marketcap: 7536\n"
+     ]
+    }
+   ],
    "source": [
     "fundamentals = pd.read_csv(DATA_PATH + 'processed/fundamentals.csv', index_col=0)\n",
     "grouped_by_marketcap = fundamentals.groupby('ID').agg({'market_cap_M': 'last'}).dropna()\n",
-    "grouped_by_sic = fundamentals.groupby('ID').agg({'sic': 'last'}).dropna()\n",
     "\n",
     "print(f'Amount of tickers: {len(tickers)}')\n",
-    "print(f\"Amount of stocks with marketcap: {len(grouped_by_marketcap)}\")\n",
-    "print(f\"Amount of stocks with SIC code: {len(grouped_by_sic)}\")"
+    "print(f\"Amount of stocks with marketcap: {len(grouped_by_marketcap)}\")"
    ]
   },
   {
