--- a/13_fundamentals.ipynb
+++ b/13_fundamentals.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "# Fundamentals\n",
-    "Recycled tickers: data not available.\n",
+    "**Recycled tickers: data not available.**\n",
+    "\n",
+    "**Not even half of the tickers have market cap data. I have decided to not use Polygon for fundamentals.**\n",
     "\n",
     "I don't really care what the exact point-in-time fundamental data is. Because that would imply updating my data at every earnings release. And my main use for fundamentals data is filtering/segmentation analysis. E.g. filter non profitable/non-profitable companies for a specific mean-reversion strategy. Or get the 3000 largest stocks by market cap. I am not interested in pure fundamental strategies, as the holding period will be months to years. And then 2003-2024 is simply not enough data.\n",
     "\n",
@@ -22,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -165,40 +167,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "no_market_cap_tickers = []\n",
-    "no_SIC_tickers = []\n",
-    "for index, row in get_tickers().iterrows():\n",
+    "for index, row in get_tickers(4, types=['CS', 'ADRC']).iterrows():\n",
     "    id = row['ID']\n",
     "    if id not in grouped_by_marketcap.index:\n",
     "        no_market_cap_tickers.append(id)\n",
-    "    if id not in grouped_by_sic.index:\n",
-    "        no_SIC_tickers.append(id)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "no_market_cap = tickers[tickers['ID'].isin(no_market_cap_tickers)]\\\n",
     "    [['ID', 'name', 'start_data', 'end_data', 'type', 'cik', 'composite_figi']]\n",
-    "no_market_cap.to_csv('../output/no_marketcap.csv')\n",
-    "\n",
-    "no_SIC = tickers[tickers['ID'].isin(no_SIC_tickers)]\\\n",
-    "    [['ID', 'name', 'start_data', 'end_data', 'type', 'cik', 'composite_figi']]\n",
-    "no_SIC.to_csv('../output/no_SIC.csv')"
+    "no_market_cap.to_csv('../data/other/POLYGON_no_marketcap.csv')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**When manually looking through the tickers with no SIC codes, almost all of them are foreign companies (but not ADRs).** It is not clear why they don't have SIC codes. Also the location is always 'us', even for foreign-headquartered corporations."
+    "I have decided to not use Polygon financial data."
    ]
   },
   {
@@ -221,14 +209,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from polygon.rest import RESTClient\n",
+    "# from polygon.rest import RESTClient\n",
     "\n",
-    "with open(DATA_PATH + \"secret.txt\") as f:\n",
-    "    KEY = next(f).strip()\n",
+    "# with open(DATA_PATH + \"secret.txt\") as f:\n",
+    "#     KEY = next(f).strip()\n",
     "\n",
-    "client = RESTClient(api_key=KEY)\n",
+    "# client = RESTClient(api_key=KEY)\n",
     "\n",
-    "data = pd.DataFrame(client.vx.list_stock_financials(cik = 'AAPL', filing_date_gte=date(2014, 1, 1), filing_date_lte=date(2016, 1, 1)) )"
+    "# data = pd.DataFrame(client.vx.list_stock_financials(cik = 'AAPL', filing_date_gte=date(2014, 1, 1), filing_date_lte=date(2016, 1, 1)) )"
    ]
   }
  ],
