--- a/13_fundamentals_compustat.ipynb
+++ b/13_fundamentals_compustat.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fundamentals using Compustat"
+    "# Fundamentals using Compustat\n",
+    "**I have decided to not use Compustat data for fundamentals as there are a lot of missing values.** This is surprising as Compustat is research-grade data. Maybe I did something wrong with my code, or Polygon's cik data is bad."
    ]
   },
   {
@@ -13,15 +14,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from datetime import datetime, date, time, timedelta\n",
-    "# from times import get_market_dates, get_market_calendar, last_trading_date_before\n",
-    "# from data import get_data\n",
-    "# from tickers import get_tickers\n",
-    "# from polygon.rest import RESTClient\n",
-    "# import json\n",
-    "# import numpy as np\n",
-    "# import ast\n",
-    "# import pandas as pd"
+    "from datetime import datetime, date, time, timedelta\n",
+    "from times import get_market_dates, get_market_calendar, last_trading_date_before\n",
+    "from data import get_data\n",
+    "from tickers import get_tickers\n",
+    "from polygon.rest import RESTClient\n",
+    "import json\n",
+    "import numpy as np\n",
+    "import ast\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -37,10 +38,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fundamentals = pd.read_csv('../data/other/compustat.csv')\n",
-    "# fundamentals['marketcap_M'] = fundamentals['cshoq'] * fundamentals['prccq']\n",
-    "# fundamentals = fundamentals[fundamentals['curcdq'] == 'USD']\n",
-    "# fundamentals.to_csv('../data/other/compustat.csv', index=False)"
+    "fundamentals = pd.read_csv('../data/other/compustat.csv')\n",
+    "fundamentals['marketcap_M'] = fundamentals['cshoq'] * fundamentals['prccq']\n",
+    "fundamentals = fundamentals[fundamentals['curcdq'] == 'USD']\n",
+    "fundamentals.to_csv('../data/other/compustat.csv', index=False)"
    ]
   },
   {
@@ -178,10 +179,10 @@
     }
    ],
    "source": [
-    "# fundamentals = pd.read_csv('../data/other/compustat.csv', index_col='cik')\n",
-    "# fundamentals.index = fundamentals.index.fillna(0).astype(int)\n",
-    "# fundamentals['datadate'] = pd.to_datetime(fundamentals['datadate']).dt.date\n",
-    "# fundamentals.loc[320193].head(3)"
+    "fundamentals = pd.read_csv('../data/other/compustat.csv', index_col='cik')\n",
+    "fundamentals.index = fundamentals.index.fillna(0).astype(int)\n",
+    "fundamentals['datadate'] = pd.to_datetime(fundamentals['datadate']).dt.date\n",
+    "fundamentals.loc[320193].head(3)"
    ]
   },
   {
@@ -190,49 +191,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# rows = [] # List of dataframes\n",
-    "# tickers = get_tickers(4, types=['CS', 'ADRC'])\n",
-    "# for index, row in tickers.iterrows():\n",
-    "#     id = row['ID']\n",
-    "#     ticker = id[:-11]\n",
+    "rows = [] # List of dataframes\n",
+    "tickers = get_tickers(4, types=['CS', 'ADRC'])\n",
+    "for index, row in tickers.iterrows():\n",
+    "    id = row['ID']\n",
+    "    ticker = id[:-11]\n",
     "\n",
-    "#     country = row['country']\n",
-    "#     cik = row['cik']\n",
-    "#     sic = row['sic']\n",
-    "#     start_data = row['start_data']\n",
-    "#     end_data = row['end_data']\n",
+    "    country = row['country']\n",
+    "    cik = row['cik']\n",
+    "    sic = row['sic']\n",
+    "    start_data = row['start_data']\n",
+    "    end_data = row['end_data']\n",
     "\n",
-    "#     if pd.isna(cik):\n",
-    "#         continue\n",
+    "    if pd.isna(cik):\n",
+    "        continue\n",
     "\n",
-    "#     try:\n",
-    "#         stock_fundamentals = fundamentals.loc[cik]\n",
-    "#     except KeyError:\n",
-    "#         continue\n",
-    "#     if isinstance(stock_fundamentals, pd.Series):\n",
-    "#         stock_fundamentals = fundamentals.loc[[cik]]\n",
+    "    try:\n",
+    "        stock_fundamentals = fundamentals.loc[cik]\n",
+    "    except KeyError:\n",
+    "        continue\n",
+    "    if isinstance(stock_fundamentals, pd.Series):\n",
+    "        stock_fundamentals = fundamentals.loc[[cik]]\n",
     "\n",
-    "#     stock_fundamentals = stock_fundamentals[(stock_fundamentals.datadate >= start_data) & \\\n",
-    "#         (stock_fundamentals.datadate <= end_data)]\n",
+    "    stock_fundamentals = stock_fundamentals[(stock_fundamentals.datadate >= start_data) & \\\n",
+    "        (stock_fundamentals.datadate <= end_data)]\n",
     "        \n",
-    "#     stock_fundamentals = stock_fundamentals[['datadate', 'marketcap_M']]\n",
-    "#     stock_fundamentals = stock_fundamentals.rename(columns={'datadate': 'date'})\n",
-    "#     stock_fundamentals.index = [id] * len(stock_fundamentals)\n",
+    "    stock_fundamentals = stock_fundamentals[['datadate', 'marketcap_M']]\n",
+    "    stock_fundamentals = stock_fundamentals.rename(columns={'datadate': 'date'})\n",
+    "    stock_fundamentals.index = [id] * len(stock_fundamentals)\n",
     "\n",
-    "#     stock_fundamentals['country'] = country\n",
-    "#     stock_fundamentals['sic'] = sic\n",
+    "    stock_fundamentals['country'] = country\n",
+    "    stock_fundamentals['sic'] = sic\n",
     "            \n",
-    "#     rows.append(stock_fundamentals)\n",
-    "#     print(index)\n",
+    "    rows.append(stock_fundamentals)\n",
+    "    print(index)\n",
     "\n",
-    "# market_cap_df = pd.concat(rows)\n",
-    "# market_cap_df.index.names = ['ID']\n",
-    "# market_cap_df.to_csv('../data/other/compustat_processed.csv')"
+    "market_cap_df = pd.concat(rows)\n",
+    "market_cap_df.index.names = ['ID']\n",
+    "market_cap_df.to_csv('../data/other/compustat_processed.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -245,13 +246,41 @@
     }
    ],
    "source": [
-    "# fundamentals = pd.read_csv('../data/other/compustat_processed.csv')\n",
-    "# grouped_by_marketcap = fundamentals.groupby('ID').agg({'marketcap_M': 'last'}).dropna()\n",
-    "# grouped_by_sic = fundamentals.groupby('ID').agg({'sic': 'last'}).dropna()\n",
+    "fundamentals = pd.read_csv('../data/other/compustat_processed.csv')\n",
+    "grouped_by_marketcap = fundamentals.groupby('ID').agg({'marketcap_M': 'last'}).dropna()\n",
     "\n",
-    "# print(f'Amount of tickers: {len(tickers)}')\n",
-    "# print(f\"Amount of stocks with marketcap: {len(grouped_by_marketcap)}\")"
+    "print(f'Amount of tickers: {len(tickers)}')\n",
+    "print(f\"Amount of stocks with marketcap: {len(grouped_by_marketcap)}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "no_market_cap_tickers = []\n",
+    "for index, row in get_tickers(4, types=['CS', 'ADRC']).iterrows():\n",
+    "    id = row['ID']\n",
+    "    if id not in grouped_by_marketcap.index:\n",
+    "        no_market_cap_tickers.append(id)\n",
+    "\n",
+    "no_market_cap = tickers[tickers['ID'].isin(no_market_cap_tickers)]\\\n",
+    "    [['ID', 'name', 'start_data', 'end_data', 'type', 'cik', 'composite_figi']]\n",
+    "no_market_cap.to_csv('../data/other/COMPUSTAT_no_marketcap.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I have decided to not use Compustat data. (And I will lose access anyways)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
